--- a/corpus/br.com.rommel.point.apk+mod/assets/www/pgandjqm-style-override.css
+++ b/corpus/br.com.rommel.point.apk+mod/assets/www/pgandjqm-style-override.css
@@ -1,49 +1,1 @@
-.ui-header .ui-title {
-	margin-right:20px;
-	margin-left:20px;
-}
-
-.ui-footer .ui-title {
-	margin-right:20px;
-	margin-left:20px;
-	white-space:normal; 
- }
- 
-.ui-content { 
-	padding-top: 5px; 
-	padding-bottom: 5px;
-} 
-.texto{
-	font-family:Arial;
-	font-size:12px;
-}
-
-.tweet{
-	display: block;
-	/*padding: .4em;*/
-	/*margin: .4em 0;*/
-}
-.tweet-left{
-	float: left;
-	margin-right: 1em;
-}
-.tweet-left img{
-	border: 0px solid #000000;
-}
-.tweet-right{
-	/*float: right;*/
-	text-align: right;
-	margin-left: 1em;
-	padding-top:5px;
-}
-.tweet p.text{
-	margin: 0;
-	padding: 0;
-	font-family: Arial;
-	font-size: 12px;
-}
-.tweetDate{
-	font-family: Arial;
-	font-size: 10px;
-	color: #969696;
-}
+.ui-header.ui-title{margin-right:20px;margin-left:20px;}.ui-footer.ui-title{margin-right:20px;margin-left:20px;white-space:normal;}.ui-content{padding-top:5px;padding-bottom:5px;}.texto{font-family:Arial;font-size:12px;}.tweet{display:block;/*padding:.4em;*//*margin:.4em0;*/}.tweet-left{float:left;margin-right:1em;}.tweet-leftimg{border:0pxsolid#000000;}.tweet-right{/*float:right;*/text-align:right;margin-left:1em;padding-top:5px;}.tweetp.text{margin:0;padding:0;font-family:Arial;font-size:12px;}.tweetDate{font-family:Arial;font-size:10px;color:#969696;}
