--- a/corpus/com.groundroad.salecalc.apk+mod/assets/www/css/salecalc.css
+++ b/corpus/com.groundroad.salecalc.apk+mod/assets/www/css/salecalc.css
@@ -1,125 +1,1 @@
-#price{
-position:absolute;
-  z-index:10;
-  color:#222;
-}
-#real_price{
-position:absolute;
-  z-index:10;
-  color:#222;
-}
-#discount_price{
-position:absolute;
-         z-index:10;
-  color:#f33;
-}
-.price_msg{
-         z-index:1;
-position:absolute;
-  color:#999;
-  font-size:10px;
-  width: 85%;
-  height: 30px;
-  background-color:#fff;
-  margin: 2px auto 4px auto;
-  padding: 10px 2% 7px 2%;
-    -webkit-border-radius: 8px;
-    border-radius: 8px;
-    -moz-border-radius: 8px;
-  border: 2px solid #CCC;
-}
-.price_box{
-  width: 85%;
-  margin: 2px auto 4px auto;
-  height: 30px;
-  font-size: 24px;
-  font-weight:bold;
-  padding: 10px 2% 7px 2%;
-  text-align:right;
-}
-ul,li{margin:0;padding:0;}
-div#saleprice{ margin:0 auto 0 auto;width:100%;height:60px;}
-div#persale{ margin:0 auto 0 auto;width:100%;height:300px;}
-div#numkey{ margin:0 auto 0 auto;width:100%;height:240px;}
-ul.numkeys {list-style:none;float:left;}
-ul.numkeys li{text-align:center;width:30%;float:left;height:50px;
-  margin-bottom:4px;
-  margin-right:5px;
-border:1px solid #ccc;
-  -webkit-border-radius: 8px;
-  border-radius: 8px;
-  -moz-border-radius: 8px;
-}
-ul.numkeys li.right{margin-right:0;width:96%;}
-ul.numkeys li.enter{margin-right:0;height:104px;width:96%;}
-ul.numkeys li a{
-  padding-top:15px;
-  padding-bottom:15px;
-  text-decoration:none;
-display:block;}
-ul.numkeys li.enter a{padding-top:40px;padding-bottom:40px;}
-ul.numkeys li:hover {
-  background-color:#444;
-}
-.clr{clear:both;}
-ul.offkeys {list-style:none;float:left;}
-ul.offkeys li{
-  text-align:center;width:9%;float:left;height:40px;
-  margin-bottom:4px;
-  margin-right:4px;
-  background-color:#eee;
-  border:1px solid #ccc;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  -moz-border-radius: 4px;
-}
-ul.offkeys li.right{margin-right:0;}
-ul.offkeys li a{
-  font-size:12px;
-  padding-top:12px;
-  padding-bottom:12px;
-  color:#ffcccc;
-  text-decoration:none;
-  display:block;
-}
-ul.offkeys li a span{
-  color: #999;
-}
-
-ul.offkeys li a:visited{
-  color:#999;
-}
-ul.offkeys li:hover {
-  background-color:#444;
-}
-ul.offkeys li:hover a span{
-  color:#fff;
-}
-div#save{
-  text-align:center;width:40%;float:right;height:40px;
-  margin-top:4px;
-  margin-bottom:4px;
-  margin-right:10%;
-  border:2px solid #ccc;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  -moz-border-radius: 4px;
-}
-div#save a{
-  background-color:#eee;
-  font-size:14px;
-  padding-top:12px;
-  padding-bottom:12px;
-  color:#444;
-  text-decoration:none;
-  display:block;
-}
-div#save a:active,
-div#save a:hover
-{
-  background-color:#555;
-  color:#fff;
-  }
-div#history{
-
-}
+#price{position:absolute;z-index:10;color:#222;}#real_price{position:absolute;z-index:10;color:#222;}#discount_price{position:absolute;z-index:10;color:#f33;}.price_msg{z-index:1;position:absolute;color:#999;font-size:10px;width:85%;height:30px;background-color:#fff;margin:2pxauto4pxauto;padding:10px2%7px2%;-webkit-border-radius:8px;border-radius:8px;-moz-border-radius:8px;border:2pxsolid#CCC;}.price_box{width:85%;margin:2pxauto4pxauto;height:30px;font-size:24px;font-weight:bold;padding:10px2%7px2%;text-align:right;}ul,li{margin:0;padding:0;}div#saleprice{margin:0auto0auto;width:100%;height:60px;}div#persale{margin:0auto0auto;width:100%;height:300px;}div#numkey{margin:0auto0auto;width:100%;height:240px;}ul.numkeys{list-style:none;float:left;}ul.numkeysli{text-align:center;width:30%;float:left;height:50px;margin-bottom:4px;margin-right:5px;border:1pxsolid#ccc;-webkit-border-radius:8px;border-radius:8px;-moz-border-radius:8px;}ul.numkeysli.right{margin-right:0;width:96%;}ul.numkeysli.enter{margin-right:0;height:104px;width:96%;}ul.numkeyslia{padding-top:15px;padding-bottom:15px;text-decoration:none;display:block;}ul.numkeysli.entera{padding-top:40px;padding-bottom:40px;}ul.numkeysli:hover{background-color:#444;}.clr{clear:both;}ul.offkeys{list-style:none;float:left;}ul.offkeysli{text-align:center;width:9%;float:left;height:40px;margin-bottom:4px;margin-right:4px;background-color:#eee;border:1pxsolid#ccc;-webkit-border-radius:4px;border-radius:4px;-moz-border-radius:4px;}ul.offkeysli.right{margin-right:0;}ul.offkeyslia{font-size:12px;padding-top:12px;padding-bottom:12px;color:#ffcccc;text-decoration:none;display:block;}ul.offkeysliaspan{color:#999;}ul.offkeyslia:visited{color:#999;}ul.offkeysli:hover{background-color:#444;}ul.offkeysli:hoveraspan{color:#fff;}div#save{text-align:center;width:40%;float:right;height:40px;margin-top:4px;margin-bottom:4px;margin-right:10%;border:2pxsolid#ccc;-webkit-border-radius:4px;border-radius:4px;-moz-border-radius:4px;}div#savea{background-color:#eee;font-size:14px;padding-top:12px;padding-bottom:12px;color:#444;text-decoration:none;display:block;}div#savea:active,div#savea:hover{background-color:#555;color:#fff;}div#history{}
