--- a/corpus/br.com.rommel.point.apk+mod/assets/www/bubbles.css
+++ b/corpus/br.com.rommel.point.apk+mod/assets/www/bubbles.css
@@ -1,77 +1,1 @@
-/* ============================================================================================================================
-== BUBBLE WITH A RIGHT-ANGLED TRIANGLE
-** ============================================================================================================================ */
-
-/* THE SPEECH BUBBLE
-------------------------------------------------------------------------------------------------------------------------------- */
-
-.triangle-right {
-	position:relative;
-	padding:15px;
-	margin:1em 0 3em;
-	background:#FEFEFE; /* default background for browsers without gradient support */
-	-webkit-border-radius:10px;
-	-moz-border-radius:10px;
-	border-radius:10px;
-}
-
-/* Variant : for left positioned triangle
------------------------------------------- */
-
-.triangle-right.left {
-	margin-left:70px;
-	background:#FEFEFE;
-}
-
-/* Variant : for right positioned triangle
------------------------------------------- */
-
-.triangle-right.right {
-	margin-right:25px;
-	background:#FEFEFE;
-}
-
-/* THE TRIANGLE
-------------------------------------------------------------------------------------------------------------------------------- */
-
-.triangle-right:after {
-	content:"";
-	position:absolute;
-	bottom:-20px; /* value = - border-top-width - border-bottom-width */
-	left:50px; /* controls horizontal position */
-	border-width:20px 0 0 20px; /* vary these values to change the angle of the vertex */
-	border-style:solid;
-	border-color:#FEFEFE transparent; 
-    /* reduce the damage in FF3.0 */
-    display:block; 
-    width:0;
-}
-
-/* Variant : left
------------------------------------------- */
-
-.triangle-right.left:after {
-	top:16px; 
-	left:-30px; /* value = - border-left-width - border-right-width */
-	bottom:auto;
-	border-width:15px 40px 0 0; /* vary these values to change the angle of the vertex */
-	border-color:transparent #FEFEFE; 
-}
-
-/* Variant : right
------------------------------------------- */
-
-.triangle-right.right:after {
-	top:16px; 
-	right:-30px; /* value = - border-left-width - border-right-width */
-	bottom:auto;
-    left:auto;
-	border-width:15px 0 0 40px; /* vary these values to change the angle of the vertex */
-	border-color:transparent #FEFEFE ; 
-}
-
-.textobubbles{
-	font-family:Arial;
-	font-size:12px;
-	color: #000000;
-}
+/*==============================================================================================================================BUBBLEWITHARIGHT-ANGLEDTRIANGLE**============================================================================================================================*//*THESPEECHBUBBLE-------------------------------------------------------------------------------------------------------------------------------*/.triangle-right{position:relative;padding:15px;margin:1em03em;background:#FEFEFE;/*defaultbackgroundforbrowserswithoutgradientsupport*/-webkit-border-radius:10px;-moz-border-radius:10px;border-radius:10px;}/*Variant:forleftpositionedtriangle------------------------------------------*/.triangle-right.left{margin-left:70px;background:#FEFEFE;}/*Variant:forrightpositionedtriangle------------------------------------------*/.triangle-right.right{margin-right:25px;background:#FEFEFE;}/*THETRIANGLE-------------------------------------------------------------------------------------------------------------------------------*/.triangle-right:after{content:"";position:absolute;bottom:-20px;/*value=-border-top-width-border-bottom-width*/left:50px;/*controlshorizontalposition*/border-width:20px0020px;/*varythesevaluestochangetheangleofthevertex*/border-style:solid;border-color:#FEFEFEtransparent;/*reducethedamageinFF3.0*/display:block;width:0;}/*Variant:left------------------------------------------*/.triangle-right.left:after{top:16px;left:-30px;/*value=-border-left-width-border-right-width*/bottom:auto;border-width:15px40px00;/*varythesevaluestochangetheangleofthevertex*/border-color:transparent#FEFEFE;}/*Variant:right------------------------------------------*/.triangle-right.right:after{top:16px;right:-30px;/*value=-border-left-width-border-right-width*/bottom:auto;left:auto;border-width:15px0040px;/*varythesevaluestochangetheangleofthevertex*/border-color:transparent#FEFEFE;}.textobubbles{font-family:Arial;font-size:12px;color:#000000;}
