--- a/corpus/br.com.rommel.point.apk+mod/assets/www/mapapp.css
+++ b/corpus/br.com.rommel.point.apk+mod/assets/www/mapapp.css
@@ -1,2 +1,1 @@
-#page-map, #map-content, #map_canvas { width: 100%; height: 100%; padding: 0; }
-#map_canvas { min-height: 100%; }
+#page-map,#map-content,#map_canvas{width:100%;height:100%;padding:0;}#map_canvas{min-height:100%;}
